--- a/experiments/configs/mixcem_awa2.yaml
+++ b/experiments/configs/mixcem_awa2.yaml
@@ -1,18 +1,16 @@
 trials: 3
 model_selection_trials: 1
-results_dir: /anfs/bigdisc/me466/mixcem_results/travelingbirds_incomplete/
+results_dir: /anfs/bigdisc/me466/mixcem_results/awa2_complete/
 
 model_selection_groups:
-  - ["^(CBM_Sigmoid).*$", "Joint CBM (Baseline)"]
-  - ["^(CBM_Logit).*$", "Joint Logit CBM (Baseline)"]
-  - ["^(Hybrid-CBM_).*$", "Hybrid-CBM (Baseline)"]
-  - ["^(CEM).*$", "CEM (Baseline)"]
-  - ["^(DNN_).*$", "DNN (Baseline)"]
+  - ["^(CBM_Sigmoid_Baseline_).*$", "Joint CBM (Baseline)"]
+  - ["^(CBM_Logit_Baseline_).*$", "Joint Logit CBM (Baseline)"]
+  - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
+  - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
   - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
-  - ["^(DNN_).*$", "DNN (Baseline)"]
   - ["^(PCBM_).*$", "Posthoc CBM (Baseline)"]
-  - ["^(HybridPCBM_).*$", "Hybrid Posthoc CBM (Baseline)"]
+  - ["^(HybridPCBM_).*$", "Posthoc Hybrid CBM (Baseline)"]
   - ["^(Linear_CMCMixIntCEM).*(_ce_0_).*$", "Linear CMCMixIntCEM No Calibration (Baseline)"]
   - ["^(Linear_CMCMixIntCEM).*(_ce_30_).*$", "Linear CMCMixIntCEM (Baseline)"]
   - ["^(Linear_CMCMixCEM).*(_ce_0_).*$", "Linear CMCMixCEM No Calibration (Baseline)"]
@@ -26,18 +24,16 @@ model_selection_metrics:
 shared_params:
   # Dataset Configuration
   dataset_config:
-    dataset: "cub"
+    dataset: "awa2"
     num_workers: 8
-    batch_size: 256
-    traveling_birds: True
-    traveling_birds_root_dir: /anfs/bigdisc/me466/TravelingBirds/
+    batch_size: 256 #64
 
     # DATASET VARIABLES
-    root_dir: /homes/me466/data/CUB200/
-    sampling_percent: 0.25
+    root_dir: /anfs/bigdisc/me466/AwA2/Animals_with_Attributes2
+    sampling_percent: 1
     sampling_groups: True
     test_subsampling: 1
-    weight_loss: True
+    weight_loss: False
 
   # Intervention Parameters
   intervention_config:
@@ -58,16 +54,13 @@ shared_params:
   # evaluation (may significantly increase experiment times)
   skip_repr_evaluation: True
 
-  max_epochs: 300
+  max_epochs: 150
   top_k_accuracy: null
   save_model: True
-
-  patience: 2
-  check_val_every_n_epoch: 4
-  lr_scheduler_patience: 5
-
+  patience: 15
   emb_size: 16
   extra_dims: 0
+  concept_loss_weight: [1, 5, 10]
   learning_rate: 0.01
   weight_decay: 0.000004
   weight_loss: True
@@ -80,7 +73,6 @@ shared_params:
   momentum: 0.9
   sigmoidal_prob: False
   training_intervention_prob: 0
-  concept_loss_weight: [1, 5]
   grid_variables:
     - concept_loss_weight
   grid_search_mode: exhaustive
@@ -97,38 +89,6 @@ shared_params:
             noise_level: 0.5
 
 runs:
-  - architecture: 'ConceptEmbeddingModel'
-    run_name: "CEM_emb_size_{emb_size}_Baseline_cwl_{concept_loss_weight}"
-    sigmoidal_prob: True
-    training_intervention_prob: 0.25
-    embedding_activation: "leakyrelu"
-    emb_size: [16] #[128, 64, 16]
-    grid_variables:
-        - concept_loss_weight
-        - emb_size
-    grid_search_mode: exhaustive
-
-  - architecture: 'ConceptBottleneckModel'
-    run_name: "DNN_extra_dims_{extra_dims}"
-    training_intervention_prob: 0
-    concept_loss_weight: 0
-    embedding_activation: "leakyrelu"
-    bool: False
-    extra_dims: [0, 50, 100, 200]
-    sigmoidal_extra_capacity: False
-    sigmoidal_prob: False
-    grid_variables:
-      - extra_dims
-    grid_search_mode: exhaustive
-
-  - architecture: 'ConceptBottleneckModel'
-    run_name: "CBM_Logit_Baseline_cwl_{concept_loss_weight}"
-    training_intervention_prob: 0
-    embedding_activation: "leakyrelu"
-    bool: False
-    extra_dims: 0
-    sigmoidal_extra_capacity: False
-    sigmoidal_prob: False
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "CBM_Sigmoid_Baseline_cwl_{concept_loss_weight}"
@@ -139,17 +99,25 @@ runs:
     sigmoidal_extra_capacity: False
     sigmoidal_prob: True
 
-  - architecture: 'IndependentConceptBottleneckModel'
-    run_name: "IndependentCBM_Baseline_cwl_{concept_loss_weight}"
+
+  - architecture: 'ConceptBottleneckModel'
+    run_name: "DNN_extra_dims_{extra_dims}"
+    extra_dims: [0, 50, 100, 200]
     training_intervention_prob: 0
+    embedding_activation: "leakyrelu"
+    sigmoidal_prob: True
+    concept_loss_weight: 0
+    grid_variables:
+      - extra_dims
+    grid_search_mode: exhaustive
+
+  - architecture: 'ConceptBottleneckModel'
+    run_name: "CBM_Logit_Baseline_cwl_{concept_loss_weight}"
     embedding_activation: "leakyrelu"
     bool: False
     extra_dims: 0
     sigmoidal_extra_capacity: False
-    sigmoidal_prob: True
-    concept_loss_weight: 1
-    grid_variables: []
-    grid_search_mode: exhaustive
+    sigmoidal_prob: False
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "Hybrid-CBM_Sigmoid_extra_dims_{extra_dims}_Baseline_cwl_{concept_loss_weight}"
@@ -157,43 +125,40 @@ runs:
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: True
-    sigmoidal_extra_capacity: False
     grid_variables:
       - concept_loss_weight
       - extra_dims
     grid_search_mode: exhaustive
 
   - architecture: 'ProbabilisticConceptBottleneckModel'
-    run_name: "ProbCBM_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_cwl_{concept_loss_weight}"
+    run_name: "ProbCBM_cwl_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_n_samples_inference_{n_samples_inference}_max_concept_epochs_{max_concept_epochs}_max_task_epochs_{max_task_epochs}"
     n_samples_inference: 50
     use_neg_concept: True
     pred_class: True
     init_negative_scale: 5
     init_shift: 5
     pretrained: True
-    hidden_dim: [4, 8, 16]
-    class_hidden_dim: [16, 32]
+    hidden_dim: [16, 32]
+    class_hidden_dim: [64, 128]
     intervention_prob: 0.5
-    # gradient_clip_val: 2.0
-    max_concept_epochs: 50
+    gradient_clip_val: 2.0
+    max_concept_epochs: 70
     warmup_epochs: 5
-    max_task_epochs: 100
+    max_task_epochs: 75
     vib_beta: 0.00005
-    concept_loss_weight: [1]
+    concept_loss_weight: 1
+    learning_rate: 0.001
     lr_ratio: 10
     weight_decay: 0
-    # weight_loss: False
-    # optimizer: adam
+    weight_loss: False
+    optimizer: adam
     grid_variables:
-      - concept_loss_weight
       - class_hidden_dim
       - hidden_dim
     grid_search_mode: exhaustive
 
-
-
   - architecture: "IntAwareConceptEmbeddingModel"
-    run_name: "IntCEM_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
+    run_name: "IntCEM_emb_size_{emb_size}_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: 0.25
     intervention_weight: [0.1, 1] #, 5]
     intervention_task_discount: [1.1, 1.5]
@@ -204,39 +169,84 @@ runs:
     max_horizon: 6
     horizon_rate: 1.005
     gradient_clip_val: 100
+    emb_size: [16, 32]
     grid_variables:
         - concept_loss_weight
         - intervention_task_discount
         - intervention_weight
+        - emb_size
     grid_search_mode: exhaustive
 
-
-
-  - architecture: 'ConceptBottleneckModel'
-    run_name: "DNN_extra_dims_{extra_dims}"
-    training_intervention_prob: 0
-    concept_loss_weight: 0
+  - architecture: 'ConceptEmbeddingModel'
+    run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
+    sigmoidal_prob: True
+    training_intervention_prob: 0.25
     embedding_activation: "leakyrelu"
-    bool: False
-    extra_dims: [0, 50, 100, 200]
-    sigmoidal_extra_capacity: False
-    sigmoidal_prob: False
+
+  - architecture: 'PosthocConceptBottleneckModel'
+    run_name: "PCBM_reg_{reg_strength}_l1_{l1_ratio}_penalty_{svd_penalty}"
+    residual: False
+    reg_strength: [0.000001, 0.001, 0.1]
+    l1_ratio: [0.99]
+    freeze_pretrained_model: True
+    freeze_concept_embeddings: True
+    emb_size: null
+
+    svd_penalty: [1]
+    active_top_percentile: 95
+    active_bottom_percentile: 5
+    blackbox_model_config:
+      name: resnet18
+      imagenet_pretrained: True
+      add_linear_layers: [112]  # Add an intermediate layer with the same size as the number of concepts so that the evaluation is fair
+    blackbox_training_epochs: 150
+    max_residual_epochs: 150
+    max_epochs: 150
+    blackbox_path: 'PCBM_BlackBox_Model_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_fold_{split}_layers_{blackbox_model_config[add_linear_layers]}'
+
+
     grid_variables:
-      - extra_dims
+      - reg_strength
+      - l1_ratio
+      - svd_penalty
     grid_search_mode: exhaustive
 
+  - architecture: 'PosthocConceptBottleneckModel'
+    run_name: "HybridPCBM_reg_{reg_strength}_l1_{l1_ratio}_penalty_{svd_penalty}"
+    residual: True  # TURN ON THE RESIDUAL MODEL!
+    reg_strength: [0.000001, 0.001, 0.1]
+    l1_ratio: [0.99]
+    freeze_pretrained_model: True
+    freeze_concept_embeddings: True
+    emb_size: null
+
+    svd_penalty: [1]
+    blackbox_model_config:
+      name: resnet18
+      imagenet_pretrained: True
+      add_linear_layers: [112]  # Add an intermediate layer with the same size as the number of concepts so that the evaluation is fair
+    blackbox_training_epochs: 150
+    max_residual_epochs: 150
+    max_epochs: 150
+    blackbox_path: 'PCBM_BlackBox_Model_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_fold_{split}_layers_{blackbox_model_config[add_linear_layers]}'
+
+    grid_variables:
+      - reg_strength
+      - l1_ratio
+      - svd_penalty
+    grid_search_mode: exhaustive
 
 
   - architecture: 'MCIntCEM'
     run_name: "Linear_CMCMixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "Linear_CMCMixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_50_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    global_model_path: "g_LineaCMCMixIntCEM_r_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_50_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "Linear_CMCMixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    global_model_path: "g_Linear_CMCMixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
     concept_loss_weight: [1]
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
-    montecarlo_test_tries: [50]
+    montecarlo_test_tries: [1]
     ood_dropout_prob: [0.1]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
@@ -250,11 +260,12 @@ runs:
     uncerainty_threshold_percentile: [null]
     inference_threshold: False
     mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1]
+    all_intervened_loss_weight: [0.01, 0.1, 1]
     calibrate_concept_probs: True
     dynamic_confidence_scaling: True
-    temperature: [1, 0] #2, 0]
+    temperature: [1, 2, 0]
     scale_fn: linear
+    ignore_task_acc_in_calibration: False
 
     ###############################################################################################
 
@@ -288,17 +299,16 @@ runs:
     grid_search_mode: exhaustive
 
 
-  # Same as above but just with the normal CEM architecture
   - architecture: 'MCIntCEM'
     run_name: "Linear_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "Linear_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_50_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    global_model_path: "g_LineaCMCMixCEM_r_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_50_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "Linear_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    global_model_path: "g_Linear_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
     concept_loss_weight: [1]
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
-    montecarlo_test_tries: [50]
+    montecarlo_test_tries: [1]
     ood_dropout_prob: [0.1]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
@@ -312,11 +322,12 @@ runs:
     uncerainty_threshold_percentile: [null]
     inference_threshold: False
     mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1]
+    all_intervened_loss_weight: [0.01, 0.1, 1]
     calibrate_concept_probs: True
     dynamic_confidence_scaling: True
-    temperature: [1, 0] #2, 0]
+    temperature: [1, 2, 0]
     scale_fn: linear
+    ignore_task_acc_in_calibration: False
 
     ###############################################################################################
 
