--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -119,23 +119,23 @@ shared_params:
       #       amount: 0.001
       #       s_vs_p: 0.5
 
-      - name: "OOD_sap_0.01"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            post_generation: False
-            name: salt_and_pepper
-            amount: 0.01
-            s_vs_p: 0.5
+      #- name: "OOD_sap_0.01"
+      #  update_previous: True
+      #  dataset_config:
+      #    test_transformation_config:
+      #      post_generation: False
+      #      name: salt_and_pepper
+      #      amount: 0.01
+      #      s_vs_p: 0.5
 
-      - name: "OOD_sap_0.05"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            post_generation: False
-            name: salt_and_pepper
-            amount: 0.05
-            s_vs_p: 0.5
+      #- name: "OOD_sap_0.05"
+      #  update_previous: True
+      #  dataset_config:
+      #    test_transformation_config:
+      #      post_generation: False
+      #      name: salt_and_pepper
+      #      amount: 0.05
+      #      s_vs_p: 0.5
 
       - name: "OOD_sap_0.1"
         update_previous: True
@@ -146,14 +146,14 @@ shared_params:
             amount: 0.1
             s_vs_p: 0.5
 
-      - name: "OOD_sap_0.25"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            post_generation: False
-            name: salt_and_pepper
-            amount: 0.25
-            s_vs_p: 0.5
+      #- name: "OOD_sap_0.25"
+      #  update_previous: True
+      #  dataset_config:
+      #    test_transformation_config:
+      #      post_generation: False
+      #      name: salt_and_pepper
+      #      amount: 0.25
+      #      s_vs_p: 0.5
 
       - name: "OOD_sap_0.5"
         update_previous: True
@@ -164,14 +164,14 @@ shared_params:
             amount: 0.5
             s_vs_p: 0.5
 
-      - name: "OOD_sap_0.75"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            post_generation: False
-            name: salt_and_pepper
-            amount: 0.75
-            s_vs_p: 0.5
+      #- name: "OOD_sap_0.75"
+      #  update_previous: True
+      #  dataset_config:
+      #    test_transformation_config:
+      #      post_generation: False
+      #      name: salt_and_pepper
+      #      amount: 0.75
+      #      s_vs_p: 0.5
 
       - name: "OOD_sap_0.9"
         update_previous: True
