--- a/experiments/configs/cub_mixcem_complete.yaml
+++ b/experiments/configs/cub_mixcem_complete.yaml
@@ -3,6 +3,7 @@ model_selection_trials: 1
 results_dir: /anfs/bigdisc/me466/mixcem_results/cub_complete/
 
 model_selection_groups:
+  - ["^(DNN).*$", "DNN (Baseline)"]
   - ["^(CBM_Sigmoid_Baseline_).*$", "Joint CBM (Baseline)"]
   - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
   - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
