--- a/experiments/configs/cub_mixcem_complete.yaml
+++ b/experiments/configs/cub_mixcem_complete.yaml
@@ -94,6 +94,60 @@ shared_params:
   # Evaluation configuration
   eval_config:
     additional_test_sets:
+      - name: "OOD_sap_0.1"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            post_generation: False
+            name: salt_and_pepper
+            amount: 0.1
+            s_vs_p: 0.5
+
+      - name: "OOD_sap_0.25"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            post_generation: False
+            name: salt_and_pepper
+            amount: 0.25
+            s_vs_p: 0.5
+
+      - name: "OOD_sap_0.5"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            post_generation: False
+            name: salt_and_pepper
+            amount: 0.5
+            s_vs_p: 0.5
+
+      - name: "OOD_sap_0.75"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            post_generation: False
+            name: salt_and_pepper
+            amount: 0.75
+            s_vs_p: 0.5
+
+      - name: "OOD_sap_0.9"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            post_generation: False
+            name: salt_and_pepper
+            amount: 0.9
+            s_vs_p: 0.5
+
+      - name: "OOD_sap_0.99"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            post_generation: False
+            name: salt_and_pepper
+            amount: 0.99
+            s_vs_p: 0.5
+
       - name: "OOD"
         update_previous: True
         dataset_config:
@@ -101,20 +155,6 @@ shared_params:
             name: random_noise
             low_noise_level: 1
             noise_level: 0.5
-      # - name: "OOD_heavy"
-      #   update_previous: True
-      #   dataset_config:
-      #     test_transformation_config:
-      #       name: random_noise
-      #       low_noise_level: 1
-      #       noise_level: 0.75
-      # - name: "OOD_heavier"
-      #   update_previous: True
-      #   dataset_config:
-      #     test_transformation_config:
-      #       name: random_noise
-      #       low_noise_level: 1
-      #       noise_level: 0.95
 
 
 runs:
