--- a/experiments/configs/cub_mixcem_complete.yaml
+++ b/experiments/configs/cub_mixcem_complete.yaml
@@ -94,6 +94,25 @@ shared_params:
   # Evaluation configuration
   eval_config:
     additional_test_sets:
+
+      - name: "OOD_sap_0.01"
+        update_previous: True
+        dataset_config:
+         test_transformation_config:
+           post_generation: False
+           name: salt_and_pepper
+           amount: 0.01
+           s_vs_p: 0.5
+
+      - name: "OOD_sap_0.05"
+        update_previous: True
+        dataset_config:
+         test_transformation_config:
+           post_generation: False
+           name: salt_and_pepper
+           amount: 0.05
+           s_vs_p: 0.5
+
       - name: "OOD_sap_0.1"
         update_previous: True
         dataset_config:
