--- a/experiments/configs/mixcem_travelbirds_complete.yaml
+++ b/experiments/configs/mixcem_travelbirds_complete.yaml
@@ -196,8 +196,10 @@ runs:
     init_negative_scale: 5
     init_shift: 5
     pretrained: True
-    hidden_dim: [16, 32]
-    class_hidden_dim: [64, 128]
+    hidden_dim: [4, 8, 16]
+    class_hidden_dim: [16, 32]
+    # hidden_dim: [16, 32]
+    # class_hidden_dim: [64, 128]
     intervention_prob: 0.5
     gradient_clip_val: 2.0
     max_concept_epochs: 70
