--- a/experiments/configs/mixcem_cub_incomplete_ablation.yaml
+++ b/experiments/configs/mixcem_cub_incomplete_ablation.yaml
@@ -4,7 +4,7 @@ model_selection_trials: 2
 results_dir: /anfs/bigdisc/me466/mixcem_results/cub_incomplete_ablation/
 
 model_selection_groups:
-  - ["^(MixIntCEM)$", "Entropy CMCMixIntCEM"]
+  - [".*(MixIntCEM).*", "MixIntCEM"]
 
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
@@ -79,73 +79,12 @@ shared_params:
             s_vs_p: 0.5
 
 runs:
-  # base is MixIntCEM_t_1_r_1_concat_None_0_mpc_1_tmc_1_emc_50_cwc_False_ce_30_g_ood_0.1_emb_16_True_tip_0.25_itd_1.1_iw_0.1_cwl_1
-  # - architecture: 'MCIntCEM'
-  #   run_name: "MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-  #   load_path_name: "MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_50_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-  #   concept_loss_weight: [1]
-  #   emb_size: [16]
-  #   shared_emb_generator: True
-  #   montecarlo_train_tries: [1]
-  #   montecarlo_test_tries: [50]
-  #   ood_dropout_prob: [0.1]
-  #   pooling_mode: ['concat']
-  #   calibration_epochs: [0, 30]
-  #   finetune_with_val: [True]
-  #   learnable_temps: False
-  #   class_wise_temperature: False
-  #   global_epochs: [0]
-  #   global_mixed_probs_coeff: 0
-  #   freeze_global_embeddings: False
-  #   max_epochs: 150
-  #   uncerainty_threshold_percentile: [null]
-  #   inference_threshold: False
-  #   mixed_probs_coeff: [1]
-  #   all_intervened_loss_weight: [1]
-  #   calibrate_concept_probs: True
-  #   dynamic_confidence_scaling: True
-  #   temperature: [1]
-  #   scale_fn: entropy
-  #   ignore_task_acc_in_calibration: False
-
-  #   ###############################################################################################
-
-  #   # IntCEM stuff
-  #   embedding_activation: null
-  #   training_intervention_prob: [0.25]
-  #   intervention_task_discount: [1.1]
-  #   use_concept_groups: True
-  #   int_model_use_bn: True
-  #   int_model_layers: [128, 128, 64, 64]
-  #   max_horizon: 6
-  #   horizon_rate: 1.005
-  #   intervention_weight: [0.1]
-  #   grid_variables:
-  #     - training_intervention_prob
-  #     - intervention_task_discount
-  #     - ood_dropout_prob
-  #     - emb_size
-  #     - finetune_with_val
-  #     - concept_loss_weight
-  #     - pooling_mode
-  #     - intervention_weight
-  #     - global_epochs
-  #     - montecarlo_train_tries
-  #     - montecarlo_test_tries
-  #     - mixed_probs_coeff
-  #     - all_intervened_loss_weight
-  #     - temperature
-  #     - calibration_epochs
-  #     - uncerainty_threshold_percentile
-  #   grid_search_mode: exhaustive
-
   # Ablation on concept_loss_weight
   - architecture: 'MCIntCEM'
     run_name: "cwl_ab_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
     load_path_name: "cwl_ab_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_50_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
-    concept_loss_weight: [1, 0.01, 0.1, 5, 10]
+    concept_loss_weight: [1, 0.01, 0.1, 2.5, 5]
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
@@ -263,67 +202,6 @@ runs:
     grid_search_mode: exhaustive
 
 
-  # all_intervened_loss_weight ablation
-  - architecture: 'MCIntCEM'
-    run_name: "ood_dropout_prob_ab_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "ood_dropout_prob_ab_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_50_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-    concept_loss_weight: [1]
-    emb_size: [16]
-    shared_emb_generator: True
-    montecarlo_train_tries: [1]
-    montecarlo_test_tries: [50]
-    ood_dropout_prob: [0.1]
-    pooling_mode: ['concat']
-    calibration_epochs: [0, 30]
-    finetune_with_val: [True]
-    learnable_temps: False
-    class_wise_temperature: False
-    global_epochs: [0]
-    global_mixed_probs_coeff: 0
-    freeze_global_embeddings: False
-    max_epochs: 150
-    uncerainty_threshold_percentile: [null]
-    inference_threshold: False
-    mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [1, 0.1, 5, 10]
-    calibrate_concept_probs: True
-    dynamic_confidence_scaling: True
-    temperature: [1]
-    scale_fn: entropy
-    ignore_task_acc_in_calibration: False
-
-    ###############################################################################################
-
-    # IntCEM stuff
-    embedding_activation: null
-    training_intervention_prob: [0.25]
-    intervention_task_discount: [1.1]
-    use_concept_groups: True
-    int_model_use_bn: True
-    int_model_layers: [128, 128, 64, 64]
-    max_horizon: 6
-    horizon_rate: 1.005
-    intervention_weight: [0.1]
-    grid_variables:
-      - training_intervention_prob
-      - intervention_task_discount
-      - ood_dropout_prob
-      - emb_size
-      - finetune_with_val
-      - concept_loss_weight
-      - pooling_mode
-      - intervention_weight
-      - global_epochs
-      - montecarlo_train_tries
-      - montecarlo_test_tries
-      - mixed_probs_coeff
-      - all_intervened_loss_weight
-      - temperature
-      - calibration_epochs
-      - uncerainty_threshold_percentile
-    grid_search_mode: exhaustive
-
 
   # ood_dropout_prob ablation
   - architecture: 'MCIntCEM'
@@ -335,7 +213,7 @@ runs:
     shared_emb_generator: True
     montecarlo_train_tries: [1]
     montecarlo_test_tries: [50]
-    ood_dropout_prob: [0.1]
+    ood_dropout_prob: [0.1, 0.25, 0.5, 0.75, 0.9]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
     finetune_with_val: [True]
@@ -615,6 +493,131 @@ runs:
     max_horizon: 6
     horizon_rate: 1.005
     intervention_weight: [0.1, 1, 5, 10]
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - ood_dropout_prob
+      - emb_size
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - global_epochs
+      - montecarlo_train_tries
+      - montecarlo_test_tries
+      - mixed_probs_coeff
+      - all_intervened_loss_weight
+      - temperature
+      - calibration_epochs
+      - uncerainty_threshold_percentile
+    grid_search_mode: exhaustive
+
+
+
+  # base is MixIntCEM_t_1_r_1_concat_None_0_mpc_1_tmc_1_emc_50_cwc_False_ce_30_g_ood_0.1_emb_16_True_tip_0.25_itd_1.1_iw_0.1_cwl_1
+  - architecture: 'MCIntCEM'
+    run_name: "base_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "base_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_1_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    shared_emb_generator: True
+    montecarlo_train_tries: [1]
+    montecarlo_test_tries: [1, 50]
+    ood_dropout_prob: [0.1]
+    pooling_mode: ['concat']
+    calibration_epochs: [0, 30]
+    finetune_with_val: [True]
+    learnable_temps: False
+    class_wise_temperature: False
+    global_epochs: [0]
+    global_mixed_probs_coeff: 0
+    freeze_global_embeddings: False
+    max_epochs: 150
+    uncerainty_threshold_percentile: [null]
+    inference_threshold: False
+    mixed_probs_coeff: [1]
+    all_intervened_loss_weight: [1]
+    calibrate_concept_probs: True
+    dynamic_confidence_scaling: True
+    temperature: [1]
+    scale_fn: entropy
+    ignore_task_acc_in_calibration: False
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    intervention_weight: [0.1]
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - ood_dropout_prob
+      - emb_size
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - global_epochs
+      - montecarlo_train_tries
+      - montecarlo_test_tries
+      - mixed_probs_coeff
+      - all_intervened_loss_weight
+      - temperature
+      - calibration_epochs
+      - uncerainty_threshold_percentile
+    grid_search_mode: exhaustive
+
+
+  # Ablation on MonteCarlo tries
+  - architecture: 'MCIntCEM'
+    run_name: "montecarlo_tries_ab_sample_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "base_MixIntCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_1_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    shared_emb_generator: True
+    montecarlo_train_tries: [1]
+    montecarlo_test_tries: [1, 25, 50, 100, 200, 0]
+    ood_dropout_prob: [0.1]
+    pooling_mode: ['concat']
+    calibration_epochs: [0, 30]
+    finetune_with_val: [True]
+    learnable_temps: False
+    class_wise_temperature: False
+    global_epochs: [0]
+    global_mixed_probs_coeff: 0
+    freeze_global_embeddings: False
+    max_epochs: 150
+    uncerainty_threshold_percentile: [null]
+    inference_threshold: False
+    mixed_probs_coeff: [1]
+    all_intervened_loss_weight: [1]
+    calibrate_concept_probs: True
+    dynamic_confidence_scaling: True
+    temperature: [1]
+    scale_fn: entropy
+    ignore_task_acc_in_calibration: False
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    intervention_weight: [0.1]
     grid_variables:
       - training_intervention_prob
       - intervention_task_discount
